--- a/assets/main.css
+++ b/assets/main.css
@@ -226,7 +226,7 @@ hr {
   /* past 768px the layout is changed and the wrapper has a fixed width of 680px
 	to accomodate both the header column and the content column */
   .wrapper {
-    width: 768px;
+    width: 680px;
   }
   /* the header column stays left and has a dynamic width with all contents
 	aligned right */
